# feodor

./: .gitignore  README.md  cli.py  constants.py  generators.py  requirements.txt  selector.py  setup.cfg
program/: __init__.py  errors.py
tests/: test_cli.py  test_const.py  test_generators.py  test_selectors.py
