[metadata]
name = feodor
version = 0.0.1
author = Maftun Hashimli
author_email = maftunhashimli@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MeftunH/feodor

[options]
packages = random_name_generator
install_requires =
    click >= 7.1.2

[options.entry_points]
console_scripts =
    generate-random-names = program.cli:generate_random_names